--- a/terraform/.github/workflows/terraform.yml
+++ b/terraform/.github/workflows/terraform.yml
@@ -1,25 +1,25 @@
 name: "Vprofile IAC"
 on:
-  push: 
-   branches:
-     - main
-     - stage
-    paths:
-     - terraform/**
+  push:
+    branches:
+      - main
+      - stage
+    paths:  
+      - terraform/**
   pull_request:
     branches:
-     - main
+      - main
     paths:
-     - terraform/**
+      - terraform/**
 
 env:
-  # Credentials for deploymenr to AWS
-  AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-  AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-  # S3 bucket for the Terraform state
-  BUCKET_IF_STATE: ${{ secrets.BUCKET_TF_STATE }}
-  AWS_REGION: ap-southeast-2
-  EKS_CLUSTER: vprofile-eks
+ # Credentials for deployment to AWS
+ AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+ AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+ # S3 bucket for the Terraform state
+ BUCKET_TF_STATE: ${{ secrets.BUCKET_TF_STATE}}
+ AWS_REGION: us-east-2
+ EKS_CLUSTER: vprofile-eks
 
 jobs:
    terraform:
@@ -27,17 +27,17 @@ jobs:
      runs-on: ubuntu-latest
      defaults:
        run:
-        shell: bash
-        working-directory: ./terraform
+         shell: bash
+         working-directory: ./terraform
 
      steps:
-       - name: Checkout source code
+       - name: Checkout source code 
          uses: actions/checkout@v4
 
        - name: Setup Terraform with specified version on the runner
          uses: hashicorp/setup-terraform@v2
          #with:
-         # terraform version: 1.6.3
+         #  terraform_version: 1.6.3
 
        - name: Terraform init
          id: init
@@ -50,12 +50,12 @@ jobs:
        - name: Terraform validate
          id: validate
          run: terraform validate
-   
+
        - name: Terraform plan
          id: plan
          run: terraform plan -no-color -input=false -out planfile
-         continue on error: true
-      
+         continue-on-error: true
+
        - name: Terraform plan status
-         if: steps.plan.outcome == 'failure'
-         run: exit 1
+         if: steps.plan.outcome == 'failure' 
+         run: exit 1     
